@@ -70,6 +70,7 @@ const nodeTypeRegistry: NodeTypeRegistry = {
   <DiagramRepresentationConfiguration nodeTypeRegistry={nodeTypeRegistry} />
 </SiriusWebApplication>
 ```
+- https://github.com/eclipse-sirius/sirius-web/issues/2790[#2790] [diagram] All handles used to resize a node have been updated to be wider, you can update your custom nodes in the same way it's done in the EllipseNode example.
 
 
 === Dependency update
@@ -112,7 +113,10 @@ It is the responsibility of the drop targets (e.g. a diagram) to validate the dr
 - https://github.com/eclipse-sirius/sirius-web/issues/2784[#2784] [performance] Expand monitoring capabilities.
 - https://github.com/eclipse-sirius/sirius-web/issues/2760[#2760] Begin and end label placement of and edge takes into account handle position.
 - https://github.com/eclipse-sirius/sirius-web/issues/2788[#2788] [diagram] Add the possibility to declare child nodes undraggable in _ListLayoutStrategy_.
-
+- https://github.com/eclipse-sirius/sirius-web/issues/2790[#2790] [diagram] Increase the size of the handles used to resize a node.
++
+.Old resize handles vs new ones
+image:doc/screenshots/biggerResizeHandles.png[Compartment with header without separator,70%]
 
 == v2023.12.0
 
